# modelcli

./: .gitignore  README.md  README_EN.md  install-skill.sh  install.sh  pyproject.toml
.agents/skills/: modelcli
samples/: README.md  README_EN.md
samples/results/: asr-zh.txt  ocr-sign.txt
skills/modelcli/: SKILL.md
skills/modelcli/agents/: openai.yaml
skills/modelcli/references/: commands.md  protocol.md
skills/modelcli/scripts/: invoke.py
src/modelcli/: __init__.py  cli.py  config.py  diagnostics.py  errors.py  files.py  presentation.py  protocol.py
src/modelcli/asr/: engine.py  vad.py
src/modelcli/detect/: __init__.py  command.py  engine.py
src/modelcli/models/: cache.py  detection.py  lifecycle.py  locking.py  manifest.py  storage.py  types.py
src/modelcli/ocr/: engine.py
src/modelcli/tts/: engine.py
tests/: test_agent_commands.py  test_asr_engine.py  test_cli_contract.py  test_cli_smoke.py  test_detect_engine.py  test_detection_lifecycle.py  test_files.py  test_model_lifecycle.py  test_skill_installer.py  test_skill_wrapper.py
