[project]
name = "modelcli"
version = "0.1.0"
description = "Local CLI for small open-source models: OCR, ASR, TTS"
requires-python = ">=3.11,<3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "platformdirs>=4",
    "modelscope>=1.30",
    "onnxruntime>=1.17",
    "numpy>=1.26,<2",
    "soundfile>=0.12",
    "scipy>=1.11",
    # OCR
    "rapidocr-onnxruntime==1.4.4",
    # ASR
    "funasr-onnx==0.4.2",
    "funasr==1.3.19",
    "torchaudio>=2.7",
    "torch>=2.7",
    "transformers>=4.57,<5",
    "onnx",
    "onnxscript",
    "silero-vad>=6.0",
    # TTS (MOSS-TTS-Nano, voice-clone, 48 kHz stereo, 0.1B params)
    "moss-tts-nano @ git+https://github.com/OpenMOSS/MOSS-TTS-Nano.git",
    "safetensors>=0.5",
]

[project.optional-dependencies]
play = ["simpleaudio>=1.0"]

[project.scripts]
modelcli = "modelcli.cli:app"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/modelcli"]
